# sampleinlinenotesplugin

./: CMakeLists.txt  README.md  plugin_sampleinlinenotes.cpp  plugin_sampleinlinenotes.h  sampleinlinecolorbox.cpp  sampleinlinecolorbox.h  sampleinlineicon.cpp  sampleinlineicon.h  sampleinlinenotes.desktop  sampleinlinetextnote.cpp  sampleinlinetextnote.h
samples/: test.cpp  test.qml  test.txt
